fixed overflow, finished css for sec1, and changed minor mistakes
fixed the width and padding issue in sec 1, which would have made the layout look bad. Added and formatted the image in sec1.

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ div{
     background-color: #1F2937;
     display:flex;
     justify-content: space-between;
-    padding: 15px 50px 15px 150px;
+    padding: 15px 150px 15px 150px;
     margin:0;
 }
 .navBar .Logo{
@@ -37,15 +37,18 @@ ul {
   li a{
     text-decoration: none;
     color: #e5e7eb;
-    font-size: 19px;
+    font-size: 18px;
     font-weight:lighter;
   }
  
 .sec1{
     margin:0;
     background-color: #1F2937;
-    width:100%;
-    padding:50px 50px 100px 150px;
+    width: 100%;
+    padding:50px 150px 100px 150px;
+    display: flex;
+    box-sizing: border-box;
+    justify-content: space-between;
 }
 h1{
     color: #F9FAF8;
@@ -61,8 +64,25 @@ h1{
 }
 
 .sec1Text{
-    width:500px;
+    width:420px;
     margin:0;
+
+}
+.sec1 .signUpButton{
+    background-color: #3882F6;
+    border:none;
+    border-radius:10px;
+    font-size:18px;
+    padding: 7px 40px 7px 40px;
+    color: #E5E7EB;
+    margin-top:15px;
+}
+
+.sec1 .imagePlaceholder{
+    color: #E5E7EB;
+    width:215px;
+    padding: 80px 100px 80px 100px;
+    background-color: rgb(120, 120, 120);
 }
 
 .sec2{
